...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileStartGame"
        android:layout_width="141dp"
        android:layout_height="72dp"
        android:layout_marginStart="232dp"
        android:layout_marginTop="488dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="171dp"
...
